--- a/MrCaption/Base.lproj/Main.storyboard
+++ b/MrCaption/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Unknown constraint types" minToolsVersion="5.1"/>
@@ -259,7 +259,7 @@
         <!--createPage-->
         <scene sceneID="XI7-2g-KHO">
             <objects>
-                <viewController storyboardIdentifier="CreatePage" useStoryboardIdentifierAsRestorationIdentifier="YES" id="WdM-QP-IZx" userLabel="createPage" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreatePage" useStoryboardIdentifierAsRestorationIdentifier="YES" id="WdM-QP-IZx" userLabel="createPage" customClass="CreatPageController" customModule="MrCaption" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="bxV-Cg-sds"/>
                         <viewControllerLayoutGuide type="bottom" id="lty-vC-TJj"/>
