--- a/MrCaption/Base.lproj/Main.storyboard
+++ b/MrCaption/Base.lproj/Main.storyboard
@@ -330,17 +330,24 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IlS-Bk-QFt">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IlS-Bk-QFt" userLabel="RepickImage">
                                         <rect key="frame" x="287" y="90" width="18" height="22"/>
                                         <state key="normal" image="create_rotateimg">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="repicButton:" destination="WdM-QP-IZx" eventType="touchUpInside" id="OpP-b2-upY"/>
+                                            <action selector="repicImage:" destination="WdM-QP-IZx" eventType="touchUpInside" id="O54-0X-HJ3"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RTc-jb-jjx">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RTc-jb-jjx" userLabel="Del">
                                         <rect key="frame" x="315" y="90" width="18" height="22"/>
                                         <state key="normal" image="create_deleteimg">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="Clear_1:" destination="WdM-QP-IZx" eventType="touchUpInside" id="2tj-mm-Oz4"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -433,6 +440,10 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="chooseButton" destination="IlS-Bk-QFt" id="DqE-MB-0r2"/>
+                        <outlet property="imageBox_1" destination="nl2-C9-A2D" id="EyH-cV-mEc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WbS-oS-Ena" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
